<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.logonrm.carros.ui.listacarros.ListaCarrosFragment">

    <Button
        android:id="@+id/btn_cadastrarCar"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="150dp"
        android:text="@string/new_car"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_findAll"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="82dp"
        android:text="@string/find_all"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_findCarByPlaca"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="13dp"
        android:text="@string/find_car"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_deletarCar"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="220dp"
        android:text="@string/delete_car"
        android:textStyle="bold" />



</FrameLayout>
